# shenanigans

./: .gitignore  LICENSE  README.md  click_types.py  main.py  pipeline.py  pyproject.toml
data/: nonsense_daos.csv
docs/: __init__.py
stages/: __init__.py  dataframes.py  export.py  extract.py
stages/apis/deepdao/: adapters.py  queries.py
stages/apis/dune/: queries.py
stages/apis/snapshot/: execution.py  queries.py
stages/data_processing/: filters.py
